PerfumeController Fix